fixed dirPath getting cut off

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -36,14 +36,29 @@ body {
 #barRight {
   display: flex;
   width: 100%;
-  height: auto;
+  height: 100%;
   justify-content: space-between;
 }
 
 #dirPathContainer {
-  width: fit-content;
-  height: fit-content;
+  width: 100%;
+  height: 100%;
 }
+#dirPath {
+  z-index: 10000000;
+  width: auto;
+  position: relative;
+  left: 40px;
+  height: auto;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1.5vw;
+  line-height: 19px;
+  color: #595959;
+  display: inline-block;
+
+}
+
 
 #settingsDiv {
   display: flex;
@@ -86,22 +101,7 @@ button {
   width: 190px;
 }
 
-#dirPath {
-  width: auto;
-  position: relative;
-  left: 40px;
 
-  font-style: normal;
-  font-weight: 700;
-  font-size: 1.5vw;
-  line-height: 19px;
-
-  color: #595959;
-
-  display: inline-block;
-  text-overflow: ellipsis;
-  overflow: hidden;
-}
 
 #file-card, #empty-queue {
   width: 40%;
